--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-fluidbox",
-  "version": "0.0.3",
-  "description": "Angular directive wrapping fluidbox",
-  "main": "dist/angular-fluidbox.min.js",
+  "name": "angular-fluidbox-commonjs",
+  "version": "1.0.0",
+  "description": "Angular directive wrapping fluidbox, for consumption via browserify",
+  "main": "src/angular-fluidbox.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/izifortune/angular-fluidbox.git"
